--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -93,11 +93,11 @@ html {
         font-weight: 700 !important; 
     }
 
-    h1:nth-child(odd of .post-sec>div>h1) { 
+    div:nth-child(odd of .post-sec) > div > h1 { 
         color: #e61111 !important;
     }
 
-   h1:nth-child(even of .post-sec>div>h1)  { 
+   div:nth-child(even of .post-sec) > div > h1 { 
         color: #4d11e6 !important;
     }
 
