--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -18,7 +18,7 @@ html {
         color: darkblue !important;
     }
 
-    #post>header>img {
+    #post>header>a>img {
         margin: auto !important;
         padding: 8px !important;
         overflow: hidden !important;
@@ -147,9 +147,8 @@ html {
         font-size: medium !important;
     }
 
-    #post>div.post-sec>img,
-    .post-body img:not(.slider img) {
-        width: 35% !important;
+    #post>div.post-sec>img{
+        width: 90% !important;
         margin: auto !important;
         padding: 8px !important;
         border: none !important;
