--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -100,6 +100,13 @@ div:nth-child(even of .post-o-lst) {
     font-weight: 700 !important;
 }
 
+#post > div.post-img {
+    background-color: #4b061d !important;
+    padding: 8px !important;
+    margin: 10px !important;
+    text-align: center!important; 
+}
+
 #post>div.post-o-lst>ol {
     font-size: 15px !important;
 }
